--- a/index.html
+++ b/index.html
@@ -16,36 +16,37 @@
 
 
 <script type="text/javascript">
+"use strict";
 
-var game = new Phaser.Game(800, 500, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+
+game.gravity
 
 var player = null;
 var level = null;
-var bug = null;
+var object = null;
 
 
-function preload()
-{
+function preload() {
 
     level = new Level(game);
     level.preload();
 
     player = new Player(game, 30, 120);
     player.preload();
-}
 
-function create()
-{
+};
+
+function create() {
     level.create();
     player.create();
+};
 
-}
-
-function update()
-{
-    level.update();
+function update() {
+    level.update(player);
     player.update(level);
-}
+
+};
 
 </script>
 </body>
