Added Sounds! More other things!

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <script type="text/javascript" src="game.js"></script>
 
     <script type="text/javascript" src="bug.js"></script>
+    <script type="text/javascript" src="items.js"></script>
     <script type="text/javascript" src="level.js"></script>
     <script type="text/javascript" src="player.js"></script>
+    <script type="text/javascript" src="actor.js"></script>
 
 
     <style type="text/css">
