Title screen stuff, fixes some odd physics with the cat.. other things

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     game.state.add('Game', LD.Game);
     game.state.add('Gameover', LD.Gameover);
     game.state.add('GameWon', LD.GameWon);
+    game.state.add('GameWonCat', LD.GameWonCat);
+
 
     // start the Boot state
     game.state.start('Boot');
