Made things inherit from sprite

--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8" />
-	<title>LD31</title>
-	<script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="boot.js"></script>
-    <script type="text/javascript" src="preloader.js"></script>
-    <script type="text/javascript" src="menu.js"></script>
-    <script type="text/javascript" src="gameover.js"></script>
-    <script type="text/javascript" src="gamewon.js"></script>
-    <script type="text/javascript" src="game.js"></script>
+  <meta charset="UTF-8" />
+  <title>LD31</title>
+  <script type="text/javascript" src="js/phaser.min.js"></script>
+  <script type="text/javascript" src="boot.js"></script>
+  <script type="text/javascript" src="preloader.js"></script>
+  <script type="text/javascript" src="menu.js"></script>
+  <script type="text/javascript" src="gameover.js"></script>
+  <script type="text/javascript" src="gamewon.js"></script>
+  <script type="text/javascript" src="game.js"></script>
 
-    <script type="text/javascript" src="bug.js"></script>
-    <script type="text/javascript" src="items.js"></script>
-    <script type="text/javascript" src="level.js"></script>
-    <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="actor.js"></script>
+  <script type="text/javascript" src="bug.js"></script>
+  <script type="text/javascript" src="items.js"></script>
+  <script type="text/javascript" src="level.js"></script>
+  <script type="text/javascript" src="player.js"></script>
+  <script type="text/javascript" src="actor.js"></script>
 
-
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
+  <style type="text/css">
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
+
 <body>
-
-
 <script type="text/javascript">
 (function() {
+  'use strict';
 
-    var game = new Phaser.Game(800, 480, Phaser.AUTO, 'game');
-
-    game.state.add('Boot', LD.Boot);
-    game.state.add('Preloader', LD.Preloader);
-    game.state.add('Menu', LD.Menu);
-    game.state.add('Game', LD.Game);
-    game.state.add('Gameover', LD.Gameover);
-    game.state.add('GameWon', LD.GameWon);
-    game.state.add('GameWonCat', LD.GameWonCat);
-
-
-    // start the Boot state
-    game.state.start('Boot');
+  var game = new Phaser.Game(800, 480, Phaser.AUTO, 'game');
+  game.state.add('Boot', LD.Boot);
+  game.state.add('Preloader', LD.Preloader);
+  game.state.add('Menu', LD.Menu);
+  game.state.add('Game', LD.Game);
+  game.state.add('Gameover', LD.Gameover);
+  game.state.add('GameWon', LD.GameWon);
+  game.state.add('GameWonCat', LD.GameWonCat);
+  game.state.start('Boot');
 })();
-
 </script>
 </body>
+
 </html>
